# Proselytize

./: .clangd  Meson-Build.sh  README.md  meson.build  native-file.ini  proselytize
.cache/clangd/index/: main.cpp.466564CE3954F468.idx  main.hpp.2B69D9F453E5B38F.idx
include/: AV_Extraction.hpp  AV_Streams.hpp  Decode.hpp  Encode.hpp  Error_Checking.hpp  File_Validation.hpp  Files.hpp  Packets.hpp  file_validation.hpp  main.hpp
src/: AV_Extraction.cpp  AV_Streams.cpp  Decode.cpp  Encode.cpp  Error_Checking.cpp  File_Validation.cpp  Packets.cpp  a.out  file_validation.cpp  main.cpp
